bootstrap/cluster-resources/in-cluster/argocd-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Prune=false
  name: argocd
spec: {}
status: {}
---
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Prune=false
  name: argo-rollouts
spec: {}
status: {}
